force-app/main/default/objects/Purchase_Order__c/fields/Bill_ID__c.field-meta.xml
<CustomField>
    <fullName>Bill_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bill ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>