force-app/main/default/objects/Purchase_Order__c/fields/Days_Elapsed__c.field-meta.xml
<CustomField>
    <fullName>Days_Elapsed__c</fullName>
    <label>Days Elapsed</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>