force-app/main/default/objects/Purchase_Order__c/fields/ERP_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Account_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ERP Account ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>