force-app/main/default/objects/Purchase_Order__c/fields/ERP_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>ERP_Account_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ERP Account Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>