force-app/main/default/objects/Purchase_Order__c/fields/ERP_Order__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ERP Order</label>
    <length>40</length>
    <type>Text</type>
</CustomField>