force-app/main/default/objects/Purchase_Order__c/fields/ERP_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_PO_Number__c</fullName>
    <description>PO Number from source system</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ERP PO Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>