force-app/main/default/objects/Purchase_Order__c/fields/Freight_Total__c.field-meta.xml
<CustomField>
    <fullName>Freight_Total__c</fullName>
    <label>Freight Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>