force-app/main/default/objects/Purchase_Order__c/fields/PO_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Created_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PO Created Date</label>
    <type>Date</type>
</CustomField>