force-app/main/default/objects/Purchase_Order__c/fields/PO_Status__c.field-meta.xml
<CustomField>
    <fullName>PO_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PO Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>