force-app/main/default/objects/Purchase_Order__c/fields/PO_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>PO_Subtotal__c</fullName>
    <label>PO Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>