force-app/main/default/objects/Purchase_Order__c/fields/SAP_Surgeon_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_Surgeon_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SAP Surgeon ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>