force-app/main/default/objects/Purchase_Order__c/fields/SAP_Surgeon_Name__c.field-meta.xml
<CustomField>
    <fullName>SAP_Surgeon_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SAP Surgeon Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>