force-app/main/default/objects/Purchase_Order__c/fields/SMS_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>SMS_Case_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SMS Case ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>