force-app/main/default/objects/Purchase_Order__c/fields/Surgery_Date__c.field-meta.xml
<CustomField>
    <fullName>Surgery_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surgery Date</label>
    <type>Date</type>
</CustomField>