force-app/main/default/objects/Purchase_Order__c/fields/Team_Rep_ID__c.field-meta.xml
<CustomField>
    <fullName>Team_Rep_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Team/Rep ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>