force-app/main/default/objects/Purchase_Order__c/fields/Territory2_ID__c.field-meta.xml
<CustomField>
    <fullName>Territory2_ID__c</fullName>
    <description>SFDC Territory2 Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Territory2 ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>