force-app/main/default/objects/Purchase_Order__c/fields/Territory2_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory2_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Territory2 Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>